# document-summarizer

./: .gitignore  CHANGELOG.md  LICENSE  README.md
.github/workflows/: ci.yml
apps/desktop/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json
apps/desktop/scripts/: prepare-cli-resource.sh
apps/desktop/src/: App.tsx  app-common.tsx  app-core.tsx  app-history.tsx  app-logs.tsx  app-output.tsx  app-process.tsx  app-settings.tsx  app-ui.tsx  app-wizard.tsx  metric-model.test.mjs  metric-model.ts  styles.css  summary-quality.test.mjs  summary-quality.ts  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/resources/pdfium/: PDFIUM_VERSION.txt
apps/desktop/src-tauri/src/: lib.rs  logs.rs  main.rs
backend-rs/: Cargo.toml
backend-rs/crates/summarizer-cli/: Cargo.toml
backend-rs/crates/summarizer-cli-util/: Cargo.toml
backend-rs/crates/summarizer-cli-util/src/: lib.rs
backend-rs/crates/summarizer-cli/src/: main.rs
backend-rs/crates/summarizer-cli/tests/: cli.rs
backend-rs/crates/summarizer-extraction/: Cargo.toml
backend-rs/crates/summarizer-extraction/src/: docx.rs  lib.rs  opc.rs
backend-rs/crates/summarizer-extraction/tests/: docx.rs  golden.rs  pdf.rs  pptx.rs  text.rs
backend-rs/crates/summarizer-pipeline/: Cargo.toml
backend-rs/crates/summarizer-pipeline/src/: lib.rs  settings.rs
backend-rs/crates/summarizer-pipeline/tests/: pipeline.rs
backend-rs/crates/summarizer-summarization/: Cargo.toml
backend-rs/crates/summarizer-summarization/src/: lib.rs
backend-rs/crates/summarizer-summarization/tests/: openai_compatible.rs
backend-rs/crates/summarizer-types/: Cargo.toml
backend-rs/crates/summarizer-types/src/: lib.rs
backend-rs/crates/summarizer-types/tests/: contract.rs
backend-rs/crates/summarizer-vision/: Cargo.toml
backend-rs/crates/summarizer-vision/src/: lib.rs
backend-rs/crates/summarizer-vision/tests/: providers.rs
backend-rs/prompts/: summarizer-insight-prompt.txt  summarizer-notes-prompt-fallback.txt  summarizer-notes-prompt.txt  summarizer-synthesis.txt  summarizer-topics-prompt.txt  vision-extract.txt
skillpack/summarizer-cli/: .gitignore  SKILL.md  favorites.json
skillpack/summarizer-cli/agents/: openai.yaml
skillpack/summarizer-cli/references/: api-contract.md  config-schema.md
skillpack/summarizer-cli/scripts/: _catalog.py  _common.py  install_skill.sh  query_result.py  run_job.py  synthesize.py  to_dataset.py  to_okf.py
skillpack/summarizer-cli/tests/: run_tests.py  test_p4.py  test_query_result.py  test_run_job_p2.py
skillpack/summarizer-cli/tests/fixtures/: sample_output.json
