[workspace]
members = [
    "crates/summarizer-types",
    "crates/summarizer-extraction",
    "crates/summarizer-vision",
    "crates/summarizer-summarization",
    "crates/summarizer-cli-util",
    "crates/summarizer-pipeline",
    "crates/summarizer-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.88"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["clock", "serde"] }
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
image = "0.25"
pdfium-auto = "0.3"
pdfium-render = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
roxmltree = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
sha2 = "0.10"
tempfile = "3.10"
thiserror = "2.0"
tokio = { version = "1.40", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
utoipa = { version = "5.3", features = ["chrono", "uuid"] }
url = "2.5"
uuid = { version = "1.10", features = ["serde", "v4"] }
wiremock = "0.6"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
