[package]
name = "document-summarizer-desktop"
version = "0.4.1"
description = "Document Summarizer desktop app"
authors = ["Document Summarizer"]
edition = "2021"
license = "MIT"
rust-version = "1.88"

[lib]
name = "document_summarizer_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["clock", "serde"] }
dirs = "6"
regex = "1"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
summarizer-cli-util = { path = "../../../backend-rs/crates/summarizer-cli-util" }
summarizer-pipeline = { path = "../../../backend-rs/crates/summarizer-pipeline" }
summarizer-types = { path = "../../../backend-rs/crates/summarizer-types" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tokio = { version = "1", features = ["fs", "io-util", "sync", "time"] }
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["serde", "v4"] }
walkdir = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
