[package]
name = "summarizer-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "summarizer-cli"
path = "src/main.rs"

[dependencies]
clap.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
reqwest.workspace = true
summarizer-extraction = { path = "../summarizer-extraction" }
summarizer-pipeline = { path = "../summarizer-pipeline" }
summarizer-types = { path = "../summarizer-types" }
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
