[package]
name = "summarizer-extraction"
version = "0.4.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
base64.workspace = true
image.workspace = true
pdfium-auto.workspace = true
pdfium-render.workspace = true
roxmltree.workspace = true
serde_json.workspace = true
summarizer-cli-util = { path = "../summarizer-cli-util" }
summarizer-types = { path = "../summarizer-types" }
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
zip.workspace = true

[dev-dependencies]
