[package]
name = "summarizer-pipeline"
version = "0.3.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
summarizer-extraction = { path = "../summarizer-extraction" }
summarizer-summarization = { path = "../summarizer-summarization" }
summarizer-types = { path = "../summarizer-types" }
summarizer-vision = { path = "../summarizer-vision" }
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
image.workspace = true
tempfile.workspace = true
wiremock.workspace = true
zip.workspace = true
