[package]
name = "summarizer-summarization"
version = "0.4.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
summarizer-cli-util = { path = "../summarizer-cli-util" }
summarizer-types = { path = "../summarizer-types" }
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
wiremock.workspace = true
