[package]
name = "summarizer-vision"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
image.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
summarizer-cli-util = { path = "../summarizer-cli-util" }
summarizer-types = { path = "../summarizer-types" }
tempfile.workspace = true
tokio.workspace = true

[dev-dependencies]
wiremock.workspace = true
